# AeroPlannerBack

./: .gitignore  README.md  main.py  pyproject.toml  test.html
app/: deps.py  main.py  settings.py
app/api/: commands.py  connection.py  gimbal_view_pro.py  hud_stream.py  joystick.py  telemetry.py
app/schemas/: telemetry.py
core/dto/: telemetry_dto.py
core/rendering/: hud.py
core/services/: gimbal_view_pro.py  joystick.py  mavlink_connection.py  mission_utils.py  telemetry_cache.py  telemetry_service.py  telemetry_store.py
