[project]
name = "aero-planner-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "geopy>=2.4.1",
    "pydantic-settings>=2.10.1",
    "pygame>=2.6.1",
    "pymavlink>=2.4.49",
]
